AC_INIT
AM_INIT_AUTOMAKE(apps, 1.00.0)

AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL

package=cmm

LIBNFCONNTRACK_REQUIRED=0.0.16
PKG_CHECK_MODULES(LIBNFCONNTRACK, libnetfilter_conntrack >= $LIBNFCONNTRACK_REQUIRED,,
	AC_MSG_ERROR(Cannot find libnetfilter_conntrack >= $LIBNFNCONNTRACK_REQUIRED))

CFLAGS="$CFLAGS $LIBNFCONNTRACK_CFLAGS"
CMM_LIBS="$LIBNFCONNTRACK_LIBS"
AC_SUBST(CMM_LIBS)

AC_ARG_ENABLE([openwrt-uci-qos],
	AS_HELP_STRING([--enable-openwrt-uci-qos],
		[enable the OpenWrt UCI-backed QM port-shaper loader]),
	[], [enable_openwrt_uci_qos=no])

AS_IF([test "x$enable_openwrt_uci_qos" = "xyes"], [
	AC_CHECK_HEADERS([uci.h], [], [AC_MSG_ERROR([OpenWrt libuci headers are required])])
	AC_CHECK_LIB([uci], [uci_alloc_context], [], [AC_MSG_ERROR([OpenWrt libuci is required])])
	CFLAGS="$CFLAGS -DCMM_OPENWRT_UCI_QOS"
	CMM_LIBS="$CMM_LIBS -luci"
])

AC_OUTPUT(Makefile src/Makefile)
